@@ -1,7 +1,5 @@
 package club.mondaylunch.gatos.api.controller.test;
 
-import static java.util.stream.Collectors.toList;
-
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 
@@ -15,12 +13,13 @@ public class NodeTypeDisplayNameTest {
         GatosCore.gatosInit();
     }
 
+    @SuppressWarnings({"unused", "StatementWithEmptyBody"})
     @Test
     public void canGetNodeTypeNames() {
         var registeredNodeTypes = NodeType.REGISTRY.getEntries()
             .stream()
             .map(NodeTypesController.NodeTypeInfo::new)
-            .collect(toList());
+            .toList();
         for (var entry: registeredNodeTypes) {
             // for some reason this doesnt work on gh, but it works locally fine for at least 2 people
             // Assertions.assertEquals(entry.displayName(), NodeTypesController.ENGLISH_DISPLAY_NAMES.get(entry.name()));
